--- a/_sass/pictures.scss
+++ b/_sass/pictures.scss
@@ -11,16 +11,16 @@ $flickr-height: 160px;
     font-size: 0.7em;
   }
 
-  .caption dl {
+  dl {
     padding-top: 0px;
     margin-top: 0px;
     font-size: 0.7em;
   }
 
-  .caption dt {
+  dt {
   }
 
-  .caption dd {
+  dd {
   }
 
   img {
