--- a/_sass/pictures.scss
+++ b/_sass/pictures.scss
@@ -28,9 +28,10 @@ $flickr-height: 160px;
   }
 }
 
-img.thumb {
-  max-height: 200px;
-}
+// Suspect this one is redundant
+//img.thumb {
+//  max-height: 200px;
+//}
 
 .caption {
   h1, h2 {
