Sounds with provenance

--- a/_includes/sound.html
+++ b/_includes/sound.html
@@ -28,4 +28,4 @@
 {% capture url %}{{ url | append:'&amp;visual=' }}{% endcapture %}
 {% capture url %}{{ url | append:visual }}{% endcapture %}
 
-<iframe class='embed-responsive-item' src={{ url }}></iframe>
+<iframe class='embed-responsive-item' src='{{ url }}'></iframe>
