--- a/assets/application.scss
+++ b/assets/application.scss
@@ -97,3 +97,11 @@ p.splash{
 .certificate {
   padding-bottom: 10px;
 }
+
+.soundcloud {
+  h2 {
+    font-size: 0.7em;
+    padding: 5px;
+    margin: 0px;
+  }
+}
