--- a/_includes/sound-cell.html
+++ b/_includes/sound-cell.html
@@ -3,5 +3,6 @@
     <div class='embed-responsive embed-responsive-16by9'>
       {% include sound.html id = include.id %}
     </div>
+    <h2>Recorded at {{ include.location }}, {{ include.date | date_to_long_string }}</h2>
   </div>
 </div>
