--- a/_layouts/blost.html
+++ b/_layouts/blost.html
@@ -9,7 +9,9 @@ license_version: 4.0
 <div class='row'>
   <div class='col-md-3'></div>
   <div class='col-md-6 blost'>
-    {{ content }}
+    <article>
+      {{ content }}
+    </article>
     {% if page.comments %}
       {% include comments.html %}
     {% endif %}
