--- a/_sass/pictures.scss
+++ b/_sass/pictures.scss
@@ -34,6 +34,7 @@ $flickr-height: 160px;
     font-size: 1em;
     margin-top: -12px;
     text-transform: lowercase;
+    text-align: center;
   }
 }
 
