--- a/assets/application.scss
+++ b/assets/application.scss
@@ -99,10 +99,11 @@ p.splash{
 }
 
 .soundcloud {
-  h2 {
+  h1 {
     font-size: 0.7em;
     padding: 5px;
     margin: 0px;
+    color: black;
   }
 }
 
