--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -3,40 +3,44 @@ layout: default
 extra_title: Live at
 ---
 <div class='row'>
-  <div class='col-md-6'>
-    <div class='gig'>
-      <dl class='dl-horizontal'>
+  <article>
 
-        <dt>Date<dt>
-        <dd>{{ page.date | date_to_long_string }}</dd>
+    <div class='col-md-6'>
+      <div class='gig'>
+        <dl class='dl-horizontal'>
 
-        <dt>Time</dt>
-        <dd>{{ page.time }}</dd>
+          <dt>Date<dt>
+          <dd>{{ page.date | date_to_long_string }}</dd>
 
-        <dt>Location</dt>
-        <dd>{{ page.location | replace: ',', ',<br />'}}</dd>
+          <dt>Time</dt>
+          <dd>{{ page.time }}</dd>
 
-        {% if page.price %}
-          <dt>Price</dt>
-          <dd>{{ page.price }}</dd>
-        {% endif %}
+          <dt>Location</dt>
+          <dd>{{ page.location | replace: ',', ',<br />'}}</dd>
 
-        {% if page.facebook_id %}
-          <dt>More info</dt>
-          <dd>
-            <a href='https://facebook.com/events/{{ page.facebook_id }}/' title='Facebook event'>
-              Facebook
-            </a>
-          </dd>
-        {% endif %}
+          {% if page.price %}
+            <dt>Price</dt>
+            <dd>{{ page.price }}</dd>
+          {% endif %}
 
-      </dl>
+          {% if page.facebook_id %}
+            <dt>More info</dt>
+            <dd>
+              <a href='https://facebook.com/events/{{ page.facebook_id }}/' title='Facebook event'>
+                Facebook
+              </a>
+            </dd>
+          {% endif %}
+
+        </dl>
+      </div>
     </div>
-  </div>
 
-  <div class='col-md-6'>
-    {% include map.html latitude = page.latitude longitude = page.longitude %}
-  </div>
+    <div class='col-md-6'>
+      {% include map.html latitude = page.latitude longitude = page.longitude %}
+    </div>
+  </article>
+
 </div>
 
 {% include json-ld.html title = page.title date = page.date time = page.time location = page.location %}
