--- a/_includes/book-us.html
+++ b/_includes/book-us.html
@@ -1,9 +1,11 @@
-<h4 class='book-us'>
-  If you'd like to book the band, please contact us on
-  <a href='https://www.facebook.com/rawfunkmaharishi'>Facebook</a>
-  or
-  <a href='https://twitter.com/uncookedfunk'>Twitter</a>,
-  or make a
-  <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/gigs/_posts/HOW_TO_BOOK_THE_BAND.md'>
-  pull-request on Github</a>
-</h4>
+<section class='book-us'>
+  <h1>
+    If you'd like to book the band, please contact us on
+    <a href='https://www.facebook.com/rawfunkmaharishi'>Facebook</a>
+    or
+    <a href='https://twitter.com/uncookedfunk'>Twitter</a>,
+    or make a
+    <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/gigs/_posts/HOW_TO_BOOK_THE_BAND.md'>
+    pull-request on Github</a>
+  </h1>
+</section>
