This belongs here

--- a/_sass/credits.scss
+++ b/_sass/credits.scss
@@ -19,3 +19,11 @@
     color: black;
   }
 }
+
+.attribution {
+  font-size: 0.5em;
+  background: $rfm-orange;
+  a {
+    color: $rfm-green;
+  }
+}
