--- a/assets/application.scss
+++ b/assets/application.scss
@@ -11,6 +11,7 @@
 @import 'pictures';
 @import 'gigs';
 @import 'credits';
+@import 'pulse-dot';
 
 body {
   color: black;
@@ -124,9 +125,19 @@ p.splash{
   bottom:11%;
   right:1%;
   font-size: 1em;
+  background-color: $rfm-green;
   color: $rfm-orange;
-  opacity: 0.8;
+  opacity: 0.7;
   margin: 0px;
   padding: 0px;
   text-align: right;
+
+  a {
+    color: black;
+  }
+
+  a:hover {
+    background-color: $rfm-orange;
+    text-decoration: none;
+  }
 }
