--- a/_sass/gigs.scss
+++ b/_sass/gigs.scss
@@ -39,3 +39,27 @@
     padding-bottom: $padding-large-vertical;
   }
 }
+
+
+.next-gig {
+  position:absolute;
+  bottom:11%;
+  right:1%;
+  font-size: 1em;
+  background-color: $rfm-green;
+  color: $rfm-orange;
+  opacity: 0.7;
+  margin: 0px;
+  padding: 0px;
+  text-align: right;
+
+  a {
+    color: black;
+  }
+
+  a:hover {
+    background-color: $rfm-orange;
+    color: $rfm-green;
+    text-decoration: none;
+  }
+}
