--- a/assets/application.scss
+++ b/assets/application.scss
@@ -11,7 +11,7 @@
 @import 'pictures';
 @import 'gigs';
 @import 'credits';
-@import 'pulse-dot';
+@import 'throbbing-gristle';
 
 body {
   color: black;
