--- a/_includes/calendar-subscribe.html
+++ b/_includes/calendar-subscribe.html
@@ -1,3 +1,3 @@
 <h2 class='subtitle'>
-  Subscribe to our <a href='/calendar.ical'>gig calendar</a>
+  Subscribe to our <a href='/calendar.ics'>gig calendar</a>
 </h2>
