--- a/_includes/next-gig-flash.html
+++ b/_includes/next-gig-flash.html
@@ -1,12 +1,15 @@
-{% assign next_gig = site.categories.gigs.first %}
-{% capture gigseconds %}{{ next_gig.date | date: '%s' }}{% endcapture %}
 {% capture nowseconds %}{{ 'now' | date: '%s' }}{% endcapture %}
-{% capture future %}{{ nowseconds | minus:gigseconds }}{% endcapture %}
-{% if future < '0' %}
-  <div class="panel panel-info next-gig">
-    <div class="panel-body">
-      <div class="throbbing-gristle"></div>
-      Next gig: <a href='{{ next_gig.url }}'>{{ next_gig.date | date: "%A %-d %B" }} at {{ next_gig.title }}</a>
+
+{% for gig in site.categories.gigs reversed %}
+  {% capture gigseconds %}{{ gig.date | date: '%s' }}{% endcapture %}
+  {% capture future %}{{ nowseconds | minus:gigseconds }}{% endcapture %}
+  {% if future < '0' %}
+    <div class="panel panel-info next-gig">
+      <div class="panel-body">
+        <div class="throbbing-gristle"></div>
+        Next gig: <a href='{{ gig.url }}'>{{ gig.date | date: "%A %-d %B" }} at {{ gig.title }}</a>
+      </div>
     </div>
-  </div>
-{% endif %}
+    {% break %}
+  {% endif %}
+{% endfor %}
