Maybe this works?

--- a/_includes/open-graph.html
+++ b/_includes/open-graph.html
@@ -1,9 +1,9 @@
-{% assign site = 'http://rawfunkmaharishi.uk' %}
-{% assign site_name = 'Raw Funk Maharishi' %}
+{% assign og_site = 'http://rawfunkmaharishi.uk' %}
+{% assign og_site_name = 'Raw Funk Maharishi' %}
 
-<meta property="og:title" content="{{ site_name }} » {{ page.title }}" />
-<meta property="og:site_name" content="{{ site_name }}"/>
-<meta property="og:url" content="{{ site }}" />
-<meta property="og:description" content="{{ site_name }}, exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams" />
+<meta property="og:title" content="{{ page.title }}" />
+<meta property="og:site_name" content="{{ og_site_name }}" />
+<meta property="og:url" content="{{ og_site }}" />
+<meta property="og:description" content="{{ og_site_name }}, exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams" />
 <meta property="og:type" content="article" />
-<meta property="og:image" content="{{ site }}/assets/images/logos/wide/square_green.png" />
+<meta property="og:image" content="{{ og_site }}/assets/images/logos/wide/square_green.png" />
