--- a/_includes/open-graph.html
+++ b/_includes/open-graph.html
@@ -1,9 +1,13 @@
 {% assign og_site = 'http://rawfunkmaharishi.uk' %}
 {% assign og_site_name = 'Raw Funk Maharishi' %}
+{% assign description = 'Raw Funk Maharishi, exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams' %}
+{% if include.description %}
+  {% assign description = include.description %}
+{% endif %}
 
-<meta property="og:title" content="{{ page.title }}" />
+<meta property="og:title" content="{{ title }}" />
 <meta property="og:site_name" content="{{ og_site_name }}" />
-<meta property="og:url" content="{{ og_site }}" />
-<meta property="og:description" content="{{ og_site_name }}, exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams" />
+<meta property="og:url" content="{{ og_site }}{{ page.url }}" />
+<meta property="og:description" content="{{ description }}" />
 <meta property="og:type" content="article" />
 <meta property="og:image" content="{{ og_site }}/assets/images/logos/wide/header_green.png" />
