--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,15 +13,7 @@
     {% endif %}
     <title>{{ title }}</title>
 
-    {% if page.gig_og %}
-      {% capture title %}Raw Funk Maharishi LIVE at {{ page.location | split:"," | first }} on {{ page.date | date_to_long_string }} at {{ page.time }}{% endcapture %}
-
-      {% capture description %}Raw Funk Maharishi will bring the LIVE FUNK to {{ page.location }} on {{ page.date | date_to_long_string }} at {{ page.time }}{% endcapture %}
-    {% else %}
-      {% capture title %}Raw Funk Maharishi » {{ title }}{% endcapture %}
-    {% endif %}
-
-    {% include open-graph.html title = title description = description %}
+    {% include open-graph.html %}
 
   </head>
 
