--- a/_includes/next-gig-flash.html
+++ b/_includes/next-gig-flash.html
@@ -1,5 +1,6 @@
+{% include constants.html %}
 {% capture nowseconds %}{{ 'now' | date: '%s' }}{% endcapture %}
-{% capture nowseconds %}{{ nowseconds | minus:86400 }}{% endcapture %}
+{% capture nowseconds %}{{ nowseconds | minus:time_offset }}{% endcapture %}
 
 {% for gig in site.categories.gigs reversed %}
   {% capture gigseconds %}{{ gig.date | date: '%s' }}{% endcapture %}
