Better date format

--- a/_includes/gig.html
+++ b/_includes/gig.html
@@ -1,2 +1,6 @@
-<dt class='title'>{{ include.date | date_to_long_string }}:</dt>
+{% capture date_string %}{{ include.date | date: "%-d %B %Y" }}{% endcapture %}
+{% if include.with_day == true %}
+  {% capture date_string %}{{ include.date | date: "%A %-d %B" }}{% endcapture %}
+{% endif %}
+<dt class='title'>{{ date_string }}:</dt>
 <dd><a href='{{ include.url }}'>{{ include.title }}</a></dd>
