--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -11,7 +11,7 @@ gig_og: true
         <dl class='dl-horizontal'>
 
           <dt>Date<dt>
-          <dd>{{ page.date | date_to_long_string }}</dd>
+          <dd>{{ page.date | date: "%A %-d %B %Y" }}</dd>
 
           <dt>Time</dt>
           <dd>{{ page.time }}</dd>
