Embed JSON-LD on front page
if there’s an upcoming gig

--- a/_includes/next-gig-flash.html
+++ b/_includes/next-gig-flash.html
@@ -12,6 +12,9 @@
         Next gig: <a href='{{ gig.url }}'>{{ gig.date | date: "%A %-d %B" }} at {{ gig.title }}</a>
       </div>
     </div>
+
+    {% include json-ld.html title = gig.title date = gig.date time = gig.time location = gig.location %}
+
     {% break %}
   {% endif %}
 {% endfor %}
