Set an 'offset' on the marker definition

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -25,7 +25,8 @@
           {
             w: 20,
             h: 30
-          }
+          },
+          new OpenLayers.Pixel(-10, -30)
         )
       )
     );
