--- a/_includes/gig.html
+++ b/_includes/gig.html
@@ -2,5 +2,8 @@
 {% if include.with_day == true %}
   {% capture date_string %}{{ include.date | date: "%A %-d %B" }}{% endcapture %}
 {% endif %}
+{% if include.with_year == true %}
+  {% capture date_string %}{{ include.date | date: "%-d %B %Y" }}{% endcapture %}
+{% endif %}
 <dt class='title'>{{ date_string }}:</dt>
 <dd><a href='{{ include.url }}'>{{ include.title }}</a></dd>
