--- a/_includes/straplines.html
+++ b/_includes/straplines.html
@@ -1,4 +1,4 @@
-<p id='strapline' class='splash text-center'></p>
+<p id='strapline' class='splash text-center'>{{ site.data.attributes.straplines[0] }}</p>
 
 <script>
 $(function() {
