--- a/_includes/takatsuka.html
+++ b/_includes/takatsuka.html
@@ -20,6 +20,6 @@
 
 <script>
 $(document).ready(function () {
-  //$('#new-album-modal').modal('show')
+  $('#new-album-modal').modal('show')
 })
 </script>
