--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
   <head>
     {% include boilerplate.html %}
     {% include js-boilerplate.html %}
-
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
     <link rel='icon' type='image/png' href='/assets/favicon.ico' />
     <link rel='stylesheet' href='/assets/application.css' type='text/css' />
     <style>{{ page.extra_styles }}</style>
