--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -38,7 +38,7 @@ gig_og: true
     </div>
 
     <div class='col-md-6'>
-      {% include map.html latitude = page.latitude longitude = page.longitude %}
+      {% include map.html latitude = page.latitude longitude = page.longitude location = page.location %}
     </div>
   </article>
 
