--- a/_includes/takatsuka.html
+++ b/_includes/takatsuka.html
@@ -10,7 +10,7 @@
           {% for outlet in site.data.albums.takatsuka.outlets %}
             <a href='{{ outlet.url }}'>{{ outlet.name }}</a>,
           {% endfor %}
-          iTunes and plenty of other outlets
+          iTunes, BitTorrent and elsewhere
         </p>
         <img src='/assets/images/album-covers/takatsuka.jpg' />
       </div>
