--- a/assets/application.scss
+++ b/assets/application.scss
@@ -122,6 +122,10 @@ p.splash{
   img {
     width: 100%;
   }
+
+  .close {
+    color: $rfm-orange;
+  }
 }
 
 // cargo-culted straight outta bootstrap
