--- a/_includes/takatsuka.html
+++ b/_includes/takatsuka.html
@@ -12,9 +12,7 @@
         <img src='/assets/images/album-covers/takatsuka.jpg' />
       </div>
       <div class='modal-footer'>
-        <button type='button' class='btn btn-warning' data-dismiss='modal' aria-label='Close'>
-          Close
-        </button>
+        {% include modal-close-button.html %}
       </div>
     </div>
   </div>
