--- a/_includes/takatsuka.html
+++ b/_includes/takatsuka.html
@@ -9,7 +9,7 @@
           {% endfor %}
           iTunes, BitTorrent and elsewhere
         </p>
-        <img src='/assets/images/album-covers/takatsuka.jpg' />
+        <img src='/assets/images/album-covers/takatsuka.jpg' alt='Takatsuka'/>
       </div>
       <div class='modal-footer'>
         {% include modal-close-button.html %}
